[gd_scene load_steps=6 format=3 uid="uid://cg0nn5k1jlf2d"]

[ext_resource type="Script" path="res://Scenes/Level/Level.gd" id="1_cpyfn"]
[ext_resource type="Texture2D" uid="uid://bokkaudnm1iqo" path="res://assets/background/rocks_2.png" id="1_dca0e"]
[ext_resource type="PackedScene" uid="uid://bnrq4k3307kij" path="res://Scenes/Plane/Plane.tscn" id="2_g3li4"]
[ext_resource type="PackedScene" uid="uid://u53ai6r6lgfw" path="res://Scenes/Pipes/pipes.tscn" id="3_c3xxp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_775ns"]
size = Vector2(489, 20)

[node name="Game" type="Node2D"]
script = ExtResource("1_cpyfn")
pipes_scene = ExtResource("3_c3xxp")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(283, 334)
texture = ExtResource("1_dca0e")

[node name="Plane" parent="." instance=ExtResource("2_g3li4")]
position = Vector2(45, 340)

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(240.5, 864)
shape = SubResource("RectangleShape2D_775ns")

[node name="PipeHolder" type="Node" parent="."]

[node name="SpawnUpper" type="Marker2D" parent="PipeHolder"]
position = Vector2(530, 340)
gizmo_extents = 80.0

[node name="SpawnLower" type="Marker2D" parent="PipeHolder"]
position = Vector2(530, 540)
gizmo_extents = 80.0

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
